// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard Component should render correctly with custom props 1`] = `
<div
  className="MovieCard"
>
  <img
    alt="movies"
    src="https://image.tmdb.org/t/p/w200/abc"
  />
  <div>
    <h3>
      movie
    </h3>
    <p>
      2000
    </p>
  </div>
</div>
`;

exports[`MovieCard Component should render correctly with no props 1`] = `
<div
  className="MovieCard"
>
  <img
    alt="movies"
    src="https://image.tmdb.org/t/p/w200/undefined"
  />
  <div>
    <h3 />
    <p />
  </div>
</div>
`;
